--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <div class="card" style="width: 15rem;">
     <img src="assets/img/suricata.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <p class="card-text font-weight-bold">Suricata</p>
+      <p class="card-text font-weight-bold">Suricata.</p>
     </div>
   </div>
 </div>
