--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="card" style="width: 15rem;">
     <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <p class="card-text font-weight-bold">Meet and Cofee</p>
+      <p class="card-text font-weight-bold">Meet and Cofee.</p>
     </div>
   </div>
 </div>
