--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="card" style="width: 15rem;">
     <img src="assets/img/iguana_page.png" class="card-img-top" alt="iguana">
     <div class="card-body">
-      <p class="card-text font-weight-bold">Iguana</p>
+      <p class="card-text font-weight-bold">Iguana.</p>
     </div>
   </div>
 </div>
