--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
 </div>
 </section>
 </div>
-
 <div class="container-fluid bg-secondary mb-3">
 <section id="web">
 <h2 class="text-center text-light">Desarrollo web</h2>
@@ -93,7 +92,7 @@
   <div class="card" style="width: 15rem;">
     <img src="assets/img/cuppon.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <p class="card-text font-weight-bold">Cuppon</p>
+      <p class="card-text font-weight-bold">Cuppon.</p>
     </div>
   </div>
 </div>
@@ -199,5 +198,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="assets/js/script.js"></script>
   </body>
   </html>
