--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  
+  <body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="#"><img src="assets/img/logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -35,12 +38,12 @@
     </div>
   </nav>
 
-  <body>
     <header class="hero text-light img-fluid mx-auto" alt="Responsive image">
       <h2 class="display-1 font-weight-bold my-5 text-left">Imagen y Desarrollo web</h2>
       <div class="container">
       </div>
     </header>
+
 <div class="container">
 <h2> DANIEL MAUREIRA </h2>
 <section id="soy">
@@ -48,10 +51,10 @@
 <p>Mi experiencia</p>
 </div>
 <div class="row m-5">
-<div class="col-6 jut">
+<div class="col-6">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis ante nulla. Donec in neque consectetur, ultrices justo eu, hendrerit lectus. Nullam fermentum turpis et dolor euismod consequat sed sed ante. Curabitur vel lacinia nisi. Sed mollis condimentum rhoncus. Proin sed diam eu risus auctor aliquet. Sed nisi lorem, mollis sit amet gravida in, finibus ut diam. Nunc cursus lacus ex, id interdum nibh tristique ac. Maecenas in mi blandit, euismod ipsum eu, lobortis nisi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris ultricies sem eu massa pellentesque, id interdum nibh luctus. Nam ac orci id neque posuere aliquam.</p>
 </div>
-<div class="col-6 jut">
+<div class="col-6">
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mattis ante nulla. Donec in neque consectetur, ultrices justo eu, hendrerit lectus. Nullam fermentum turpis et dolor euismod consequat sed sed ante. Curabitur vel lacinia nisi. Sed mollis condimentum rhoncus. Proin sed diam eu risus auctor aliquet. Sed nisi lorem, mollis sit amet gravida in, finibus ut diam. Nunc cursus lacus ex, id interdum nibh tristique ac. Maecenas in mi blandit, euismod ipsum eu, lobortis nisi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris ultricies sem eu massa pellentesque, id interdum nibh luctus. Nam ac orci id neque posuere aliquam.</p>
 </div>
 </div>
@@ -76,6 +79,7 @@
 </div>
 </section>
 </div>
+
 <div class="container-fluid bg-secondary mb-3">
 <section id="web">
 <h2 class="text-center text-light">Desarrollo web</h2>
@@ -160,10 +164,10 @@
                 <i class="fab fa-adobe fa-3x"></i>
               </div>
               <div class="col-4">
-<i class="fas fa-camera fa-3x"></i>
+              <i class="fas fa-camera fa-3x"></i>
               </div>
               <div class="col-4">
-<i class="fas fa-video fa-3x"></i>
+              <i class="fas fa-video fa-3x"></i>
               </div>
             </div>
           </div>
@@ -174,7 +178,7 @@
                 <i class="fab fa-css3-alt fa-3x"></i>
               </div>
               <div class="col-4">
-                <i class="fab fa-html5 fa-3x"></i>
+              <i class="fab fa-html5 fa-3x"></i>
               </div>
               <div class="col-4">
               <i class="fab fa-js-square fa-3x"></i>
@@ -198,6 +202,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 <script src="assets/js/script.js"></script>
   </body>
   </html>
